--- a/product-dev.yml
+++ b/product-dev.yml
@@ -6,6 +6,11 @@ spring:
     username: root
     password: Redli9600,.0@
     url: jdbc:mysql://redli.xin:3306/sell?characterEncoding=utf-8&useSSL=false
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
 eureka:
   client:
     service-url:
